Composant Collapse : correction animation à l'ouverture

--- a/src/components/collapse/index.css
+++ b/src/components/collapse/index.css
@@ -4,17 +4,6 @@
 	margin-bottom: 30px;
 	background-color: #F6F6F6;
 	border-radius: 18px 18px 5px 5px;
-	animation: OpenedCollapseEffect 0.7s ease-in-out;
-}
-
-@keyframes openedCollapseEffect {
-	0% {
-		overflow: hidden;
-		max-height: 50px;
-	}
-	100% {
-		max-height: 500px;
-	}
 }
 
 .btnCollapse {
@@ -60,7 +49,7 @@
 
 @keyframes ulEffect {
 	0% {
-		margin-top: -30px;
+		margin-top: -100px;
 		opacity: 0;
 	}
 	
